cc_binary(
  name = "stunserver",
  srcs = [
    "stunserver/stunserver_main.cc"
  ],
  copts = [
      "-Iexternal/com_google_webrtc/src",
  ],
  defines = [
      "WEBRTC_POSIX",
      "WEBRTC_MAC",
  ],
  deps = [
      "@com_google_webrtc//:webrtc-lib",
      "@com_google_webrtc//:p2p_server_utils",
      "@com_google_absl//absl/strings",
      "@com_google_absl//absl/meta:type_traits",
      "@com_google_absl//absl/types:optional",
    ],
)

cc_binary(
  name = "turnserver",
  srcs = [
    "turnserver/turnserver_main.cc",
    "turnserver/read_auth_file.cc",
    "turnserver/read_auth_file.h",
  ],
  copts = [
      "-std=c++14",
      "-Iexternal/com_google_webrtc/src",
  ],
  defines = [
      "WEBRTC_POSIX",
      "WEBRTC_MAC",
  ],
  deps = [
    "@com_google_webrtc//:rtc_base",
    "@com_google_webrtc//:rtc_p2p",
    "@com_google_absl//absl/types:optional",
    "@com_google_absl//absl/strings",
    "@com_google_absl//absl/algorithm:container",
  ]
)

cc_binary(
  name = "stun_prober",
  srcs = [
    "stunprober/main.cc",
  ],
  copts = [
      "-std=c++14",
      "-Iexternal/com_google_webrtc/src",
  ],
  defines = [
      "WEBRTC_POSIX",
      "WEBRTC_MAC",
  ],
  deps = [
    "@com_google_webrtc//:rtc_base",
    "@com_google_webrtc//:rtc_p2p",
    "@com_google_absl//absl/flags:flag",
    "@com_google_absl//absl/flags:parse",
  ]
)

cc_binary(
  name = "peerconnection_server",
  srcs = [
      "peerconnection/server/data_socket.cc",
      "peerconnection/server/data_socket.h",
      "peerconnection/server/main.cc",
      "peerconnection/server/peer_channel.cc",
      "peerconnection/server/peer_channel.h",
      "peerconnection/server/utils.cc",
      "peerconnection/server/utils.h",
  ],
  copts = [
      "-std=c++14",
      "-Iexternal/com_google_webrtc/src",
  ],
  defines = [
      "WEBRTC_POSIX",
      "WEBRTC_MAC",
  ],
  deps = [
    "@com_google_webrtc//:rtc_base",
    "@com_google_webrtc//:system_wrappers",    
    "@com_google_absl//absl/flags:flag",
    "@com_google_absl//absl/flags:parse",
    "@com_google_absl//absl/flags:usage",
  ],
)
